--- a/swipelistview/res/values/swipelistview__attrs.xml
+++ b/swipelistview/res/values/swipelistview__attrs.xml
@@ -44,6 +44,11 @@
         </attr>
         <attr name="swipeDrawableChecked" format="reference"/>
         <attr name="swipeDrawableUnchecked" format="reference"/>
+
+        <attr name="longPressAction" format="enum">
+            <enum name="choice" value="0"/>
+            <enum name="swipeOpen" value="1"/>
+        </attr>
     </declare-styleable>
 
 </resources>
